# restaurant_menu_app

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/server/: error.rs  handlers.rs  in_memory_menu_store.rs  in_memory_order_store.rs  in_memory_table_store.rs  main.rs  mod.rs  models.rs  restaurant.rs
src/server/api/: mod.rs
src/server/api/v1/: handlers.rs  mod.rs  openapi.rs  routes.rs
src/server/data_model/: models.rs
src/server/data_store/: in_memory_menu_store.rs  in_memory_order_store.rs  in_memory_table_store.rs  mod.rs
src/server/utils/: error.rs  mod.rs  param_validation.rs  response.rs
tests/: handler_intergration_tests.rs
